# Real-Time-Conversational-AI-Platform

./: .env.example  .gitignore  0.2.27  L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  README.md  agent-executor.ipynb  agents-intro.ipynb  chat-memory.ipynb  chatbot.ipynb  few-shot-prompting.ipynb  langsmith.ipynb  lecl.ipynb  llm_app.ipynb  prompts.ipynb  req.txt  requirements.txt  scientific-paper-analyser.ipynb  scientific-req.txt
chat-system/api/: agent.py  agent_tools.py  api-test.py  callback.py  conversation_model.json  custom_requests.py  db.py  debug.py  docker-compose.yml  main.py  pyproject.toml  stream.py  test_streaming.py  title.py
chat-system/frontend/: nuxt.config.ts  package.json
chat-system/frontend/components/: AppSidebar.vue  MarkdownRenderer.vue  Output.vue  Steps.vue  TextInput.vue
chat-system/frontend/layouts/: default.vue
chat-system/frontend/pages/: [id].vue  index.vue
chat-system/frontend/plugins/: markdown-plugin.ts
chat-system/frontend/shared/: types.ts
langgraph-dev/: chatbot-memory-human-il.ipynb  chatbot-tools.ipynb  chatbot.ipynb  customize-state.ipynb  main.py  pyproject.toml  req.txt  test-customize-state.py  test_interrupt.py
langgraph-dev/jobs-scraper/: application.py  main.py  pyproject.toml
langgraph-dev/jobs-scraper/agents/: job_discovery.py
langgraph-dev/jobs-scraper/tools/: scraper.py
web-scraping/: chatpter1.ipynb  pyproject.toml  scrapetest.py  wikipedia.ipynb
web-scraping/crawl-4-ai/: deep_bfs_crawler.py  quickstart.ipynb  result.md  simple_crawling.py
